# domain_gen

./: Cargo.toml  README.md  alive.txt  dead.txt  possibilities.txt  tld.txt  ugh.rb
src/: main.rs
